[tool.poetry]
name = "solar_thing"
version = "0.1"
description = "Converts SolaX Excel files into something comparible to smart meter readings"
authors = ["Chris Jones <chris@brasskipper.org.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "solar_thing"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.3"
SQLAlchemy = ">2.0"
psycopg2-binary = "^2.9.10"
scipy = "^1.14.1"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
